<resources>
    <string name="app_name">Take&amp;Go</string>
    <string name="add_entities">Add Entities:</string>
    <string name="add_branch">Add Branch</string>
    <string name="add_car">Add Car</string>
    <string name="add_car_model">Add Car Model</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_reservation">Add Reservation</string>
    <string name="display_all_entities">Display All Entities:</string>
    <string name="display_all_branches">All Branches</string>
    <string name="display_all_cars">All Cars</string>
    <string name="display_all_models">All Models</string>
    <string name="display_all_customers">All Customers</string>
    <string name="display_all_reservations">All Reservations</string>
</resources>
